Isolated all SQLMap configuration logic from the XML parser.
Note: The ParserState class is the temporary home of this logic and the API is horrendous.  It is not meant to be usable, but this checkin is significant due to the complexity of separating this functionality.  It's ready for the next phase of refactorings to clean up the API. 

git-svn-id: https://svn.apache.org/repos/asf/ibatis/trunk@512614 13f79535-47bb-0310-9956-ffa450edef68